<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/choisi_ta_couleur"
        android:layout_marginTop="75dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        />

    <RadioGroup
        android:id="@+id/choix_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_color"
        android:layout_marginTop="25dp"
    >
        <RadioButton
            android:id="@+id/color_rouge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rouge"
            android:onClick="returnedRed"
            android:textColor="#E62600"
            />
        <RadioButton
            android:id="@+id/color_bleu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bleu"
            android:onClick="returnedBlue"
            android:textColor="#0073E6"
            />
        <RadioButton
            android:id="@+id/color_vert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vert"
            android:onClick="returnedGreen"
            android:textColor="#339900"
            />
        <RadioButton
            android:id="@+id/color_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:onClick="returnedOrange"
            android:textColor="#FF8C19"
            />
        <RadioButton
            android:id="@+id/color_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blanc"
            android:onClick="returnedReset"
            android:textColor="#FFFFFF"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>